# nlppp-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: wheels.yml
python-c-binding/: CMakeLists.txt  main.cpp
tests/: test_basic.py
